# vulkan_bootstrap

./: .gitmodules  CMakeLists.txt  README.md  bootstrap.py
src/: gl_helpers.cpp  gl_helpers.h  main.cpp  utils.h
src/lib/: graphics.cpp  graphics.h  graphics_gl4.cpp  graphics_gl4.h  utils.h
tests/test_src/: weak_ref_manager_test.cpp
